force-app/main/default/objects/FT_Cart_Items__c/FT_Cart_Items__c.object-meta.xml
<CustomObject>
    <label>FT-Cart Items</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>FT-Order Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FT-Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>