force-app/main/default/objects/FT_Cart_Items__c/fields/Cart_Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Cart_Item_Price__c</fullName>
    <label>Cart Item Price</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>