force-app/main/default/objects/FT_Cart_Items__c/fields/Cart_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Cart_Item_Quantity__c</fullName>
    <label>Cart Item Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>