force-app/main/default/objects/FT_Cart_Items__c/fields/FT_Cart__c.field-meta.xml
<CustomField>
    <fullName>FT_Cart__c</fullName>
    <label>FT-Cart</label>
    <referenceTo>FT_Cart__c</referenceTo>
    <relationshipLabel>FT-Cart Items</relationshipLabel>
    <relationshipName>FT_Cart_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>