force-app/main/default/objects/FT_Cart_Items__c/fields/FT_Products__c.field-meta.xml
<CustomField>
    <fullName>FT_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FT-Products</label>
    <referenceTo>FT_Products__c</referenceTo>
    <relationshipLabel>FT-Cart Items</relationshipLabel>
    <relationshipName>FT_Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>